--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "tsc",
     "prepublishOnly": "npm run clean && npm run build",
     "prettier:fix": "prettier --write --no-config '*.json' 'src/**/*.{ts,json}'",
+    "release": "np",
     "test": "jest",
     "test:watch": "jest --watch"
   },
@@ -40,6 +41,7 @@
   "devDependencies": {
     "@types/jest": "26.0.23",
     "jest": "26.6.3",
+    "np": "7.5.0",
     "prettier": "2.2.1",
     "rimraf": "3.0.2",
     "ts-jest": "26.5.6",
