--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "tsc",
     "clean": "rimraf dist",
-    "pre-commit": "npm run prettier:fix && npm test",
+    "precommit": "npm run prettier:fix && npm test",
     "prepare": "husky install",
     "prettier:fix": "prettier --write --no-config '*.json' 'src/**/*.{ts,json}'",
     "release": "np",
