ci(fix): do not ship tests

--- a/.npmignore
+++ b/.npmignore
@@ -1,7 +1,10 @@
 # Ignore everything
 *
 
-# Except
+# Except:
 !dist/**/*.js
 !dist/**/*.js.map
 !dist/**/*.d.ts
+
+# But still ignore:
+dist/**/*.test.*
