--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -7,15 +7,12 @@ jobs:
   check:
     name: Node.js ${{ matrix.node-version }}
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        node-version:
-          - 16
     steps:
       - uses: actions/checkout@v2
+      - id: nvmrc
+        run: echo ::set-output name=NODE_VERSION::$(cat .nvmrc)
       - uses: actions/setup-node@v1
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: ${{ steps.nvmrc.outputs.NODE_VERSION }}
       - run: npm ci
       - run: npm run check
